--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-REACT_APP_URL_API_PROCEDURES=http://localhost:000/procedures
-REACT_APP_URL_API_QUESTIONS=http://localhost:7000/allQuestions
-REACT_APP_URL_API_DATA=http://localhost:9000/api/destination
+REACT_APP_URL_API_CATEGORIAS= http://localhost:3001/consultaCategorias
